Switch to macports from brew to install older versions of dependencies

--- a/.github/workflows/build-macos-x86.yml
+++ b/.github/workflows/build-macos-x86.yml
@@ -12,33 +12,30 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Install protobuf
-        run: |
-          pip3 install --user protobuf --break-system-packages
+      - uses: melusina-org/setup-macports@v1
+      - run: port version
 
-      - name: Install brew dependencies
+      - name: Install macports dependencies
         run: |
-          brew update
-          brew install --force qt@6 ffmpeg pkgconfig opus openssl cmake ninja nasm sdl2 protobuf speexdsp libplacebo wget python-setuptools json-c miniupnpc || true
+          sudo port install --target-os=10.15 qt6 ffmpeg7 pkgconfig libopus openssl3 cmake ninja nasm libsdl2 protobuf-c py-protobuf speexDSP libplacebo wget json-c miniupnpc
 
       - name: Configure chiaki-ng
         run: |
-          cmake -S . -B build -G "Ninja" -DCMAKE_BUILD_TYPE=Release -DCHIAKI_ENABLE_CLI=OFF -DCHIAKI_ENABLE_STEAMDECK_NATIVE=OFF -DCMAKE_PREFIX_PATH="$(brew --prefix)/opt/@openssl@3;$(brew --prefix)/opt/qt@6"
+          cmake -S . -B build -G "Ninja" -DCMAKE_BUILD_TYPE=Release -DCHIAKI_ENABLE_CLI=OFF -DCHIAKI_ENABLE_STEAMDECK_NATIVE=OFF"
 
       - name: Build chiaki-ng
         run: |
-          export CPATH=$(brew --prefix)/opt/ffmpeg/include
           cmake --build build --config Release --clean-first --target chiaki
 
       - name: Deploy chiaki-ng
         run: |
           cp -a build/gui/chiaki.app chiaki-ng.app
           cp scripts/qtwebengine_import.qml gui/src/qml/
-          $(brew --prefix)/opt/qt@6/bin/macdeployqt chiaki-ng.app -qmldir="$PWD/gui/src/qml" -libpath=$(brew --prefix)/lib
+          macdeployqt chiaki-ng.app -qmldir="$PWD/gui/src/qml" -libpath=/opt/local/lib
           mkdir -p chiaki-ng.app/Contents/Resources/vulkan/icd.d
           wget https://github.com/KhronosGroup/MoltenVK/releases/download/v1.2.9/MoltenVK-macos.tar && tar xf MoltenVK-macos.tar
           cp MoltenVK/MoltenVK/dylib/macOS/* chiaki-ng.app/Contents/Resources/vulkan/icd.d
-          $(brew --prefix)/opt/qt@6/bin/macdeployqt chiaki-ng.app -qmldir="$PWD/gui/src/qml" -libpath=$(brew --prefix)/lib
+          macdeployqt chiaki-ng.app -qmldir="$PWD/gui/src/qml" -libpath=/opt/local/lib
           ln -s ../../../../../../../Frameworks chiaki-ng.app/Contents/Frameworks/QtWebEngineCore.framework/Helpers/QtWebEngineProcess.app/Contents
           ln -s libvulkan.1.dylib chiaki-ng.app/Contents/Frameworks/vulkan
           codesign --force --entitlements gui/entitlements.xml --deep --sign - chiaki-ng.app
